<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:weightSum="7">

    <TextView
        android:id="@+id/text"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textColor="@color/teal_200"
        android:textSize="24sp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/full_name"
        android:minHeight="48dp"
        app:startIconDrawable="@drawable/ic_person"
        app:endIconMode="clear_text"
        android:layout_weight="1"
        app:errorEnabled="true"
        app:errorTextColor="@color/red"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:maxLines="1"
            android:maxLength="25"
            android:textColor="#2C7AFD"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/age"
        android:minHeight="48dp"
        app:startIconDrawable="@drawable/ic_growth"
        app:endIconMode="clear_text"
        android:layout_weight="1"
        app:errorEnabled="true"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:maxLines="1"
            android:maxLength="2"
            android:inputType="number"
            android:textColor="#2C7AFD"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:minHeight="48dp"
        app:startIconDrawable="@drawable/ic_call"
        app:endIconMode="clear_text"
        android:layout_weight="1"
        app:prefixText="+91"
        app:errorEnabled="true"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:maxLines="1"
            android:maxLength="10"
            android:inputType="phone"
            android:textColor="#2C7AFD"

            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bio"
        android:minHeight="48dp"
        app:startIconDrawable="@drawable/ic_bio"
        app:endIconMode="clear_text"
        android:weightSum="1"
        app:errorEnabled="true"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:maxLines="1"
            android:maxLength="25"
            android:inputType="text"
            android:textColor="#2C7AFD"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout

        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/location"
        android:minHeight="48dp"
        app:startIconDrawable="@drawable/ic_location"
        app:endIconMode="clear_text"
        android:weightSum="1"
        app:errorEnabled="true"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:maxLines="1"
            android:maxLength="20"
            android:inputType="text"
            android:textColor="#2C7AFD"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:minHeight="64dp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:enabled="false"
        />
</LinearLayout>