<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile">

    <TextView
        android:id="@+id/profile"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/teal_200"
        android:paddingTop="30dp"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="32sp" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image"
        android:layout_centerHorizontal="true"
        android:layout_width="175dp"
        android:layout_height="150dp"
        android:src="@drawable/man"
        app:civ_border_color="@color/white"
        app:civ_border_width="6dp"
        android:layout_marginTop="80dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image"
        android:layout_marginTop="18dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:paddingTop="12dp"
            android:text="@string/year"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/age"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@drawable/rectangle"
            android:padding="12dp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:paddingTop="12dp"
            android:text="@string/mobile_number"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/number"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@drawable/rectangle"
            android:padding="12dp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:paddingTop="12dp"
            android:text="@string/place"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/location"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@drawable/rectangle"
            android:padding="12dp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:paddingTop="12dp"
            android:text="@string/about"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/bio"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@drawable/rectangle"
            android:padding="12dp"
            android:textColor="@color/black" />
    </LinearLayout>
</RelativeLayout>